// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a Checkout component When is invoked  Then is rendered correct with user address & card information 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginHorizontal": 30,
        "marginTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        Shipping information
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="navigation"
      >
        <Text
          style={
            Object {
              "color": "#2E3192",
              "fontFamily": "RalewayRegular",
              "fontSize": 18,
            }
          }
        >
          edit
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "elevation": 5,
          "height": 150,
          "justifyContent": "center",
          "paddingHorizontal": 20,
          "shadowColor": "grey",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3.84,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
            >
              <Text />
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "fontFamily": "MontserratRegular",
              "fontSize": 14,
              "width": 250,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
            >
              <Text />
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "fontFamily": "MontserratRegular",
              "fontSize": 14,
              "width": 250,
            }
          }
        >
          undefined undefined undefined undefined
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginHorizontal": 30,
        "marginTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        Payment Method
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="navigation"
      >
        <Text
          style={
            Object {
              "color": "#2E3192",
              "fontFamily": "RalewayRegular",
              "fontSize": 18,
            }
          }
        >
          edit
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "elevation": 5,
          "height": 150,
          "justifyContent": "center",
          "paddingHorizontal": 20,
          "shadowColor": "grey",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3.84,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://logodownload.org/wp-content/uploads/2016/10/visa-logo-8.png",
            }
          }
          style={
            Object {
              "borderRadius": 5,
              "height": 50,
              "marginRight": 30,
              "width": 80,
            }
          }
        />
        <Text
          style={
            Object {
              "paddingTop": 20,
              "width": 150,
            }
          }
        >
          **** **** **** 9012
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "bottom": 25,
        "height": 80,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        Total:
      </Text>
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        1.00 euros
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F3603F",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
      testID="pay"
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        CONFIRM AND PAY
      </Text>
    </View>
  </View>
</View>
`;

exports[`Given a Checkout component When is invoked  Then is rendered correct without user address & card information 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginHorizontal": 30,
        "marginTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        Shipping information
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="navigation"
      >
        <Text
          style={
            Object {
              "color": "#2E3192",
              "fontFamily": "RalewayRegular",
              "fontSize": 18,
            }
          }
        >
          edit
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "elevation": 5,
          "height": 150,
          "justifyContent": "center",
          "paddingHorizontal": 20,
          "shadowColor": "grey",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3.84,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#242424",
                      "fontSize": 24,
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Object {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "fontFamily": "MontserratRegular",
              "fontSize": 14,
              "width": 250,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#242424",
                      "fontSize": 24,
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Object {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "fontFamily": "MontserratRegular",
              "fontSize": 14,
              "width": 250,
            }
          }
        >
          Please enter your shipping address 
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginHorizontal": 30,
        "marginTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        Payment Method
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="navigation"
      >
        <Text
          style={
            Object {
              "color": "#2E3192",
              "fontFamily": "RalewayRegular",
              "fontSize": 18,
            }
          }
        >
          edit
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "elevation": 5,
          "height": 150,
          "justifyContent": "center",
          "paddingHorizontal": 20,
          "shadowColor": "grey",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3.84,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://logodownload.org/wp-content/uploads/2016/10/visa-logo-8.png",
            }
          }
          style={
            Object {
              "borderRadius": 5,
              "height": 50,
              "marginRight": 30,
              "width": 80,
            }
          }
        />
        <Text
          style={
            Object {
              "paddingTop": 20,
              "width": 150,
            }
          }
        >
          Please enter your card information
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "bottom": 25,
        "height": 80,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        Total:
      </Text>
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        1.00 euros
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F3603F",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
      testID="pay"
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        CONFIRM AND PAY
      </Text>
    </View>
  </View>
</View>
`;

exports[`Given a Checkout component When pay button is pressed Then is rendered correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginHorizontal": 30,
        "marginTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        Shipping information
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="navigation"
      >
        <Text
          style={
            Object {
              "color": "#2E3192",
              "fontFamily": "RalewayRegular",
              "fontSize": 18,
            }
          }
        >
          edit
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "elevation": 5,
          "height": 150,
          "justifyContent": "center",
          "paddingHorizontal": 20,
          "shadowColor": "grey",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3.84,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#242424",
                      "fontSize": 24,
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Object {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "fontFamily": "MontserratRegular",
              "fontSize": 14,
              "width": 250,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#242424",
                      "fontSize": 24,
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Object {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "fontFamily": "MontserratRegular",
              "fontSize": 14,
              "width": 250,
            }
          }
        >
          undefined undefined undefined undefined
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginHorizontal": 30,
        "marginTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        Payment Method
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="navigation"
      >
        <Text
          style={
            Object {
              "color": "#2E3192",
              "fontFamily": "RalewayRegular",
              "fontSize": 18,
            }
          }
        >
          edit
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "elevation": 5,
          "height": 150,
          "justifyContent": "center",
          "paddingHorizontal": 20,
          "shadowColor": "grey",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3.84,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://logodownload.org/wp-content/uploads/2016/10/visa-logo-8.png",
            }
          }
          style={
            Object {
              "borderRadius": 5,
              "height": 50,
              "marginRight": 30,
              "width": 80,
            }
          }
        />
        <Text
          style={
            Object {
              "paddingTop": 20,
              "width": 150,
            }
          }
        >
          **** **** **** 9012
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "bottom": 25,
        "height": 80,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        Total:
      </Text>
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        1.00 euros
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F3603F",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
      testID="pay"
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        CONFIRM AND PAY
      </Text>
    </View>
  </View>
</View>
`;
